[project]
name = "test-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "ol4sm00",email = "ol4sm00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli] (>=1.8.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
